--- a/ui-advanced-design.Rmd
+++ b/ui-advanced-design.Rmd
@@ -12,19 +12,8 @@ The first and most important step in creating a custom UI is to change the value
 
 ## Modifing the UI YAML
 
-The UI YAML is pretty straight forward. It follows a tree structure that defines the child/parent relationship between the controls.
-The top level or root control is the first thing that is described by the YAML. The root control can be understood as the whole options panel. Below are the properties of the root control:
-
-Property      | Description                               | Form                 |
-------------- | ------------------------------------------| -------------------- |
-*name*  | The name of the analysis. | Unique string
-*title*  | Sets the title to be displayed at the top of the option panel. | string
-*jus*  | Defines the syntax version used by the u.yaml file. | string of form 'number.number' 
-*stage*  | Sets the stage display filter. | 0 - Released\
-1 - In development\
-2 - Proposed
-*compilerMode*  | Sets the compiler interaction mode. | *enum*: tame, aggressive
-*children*  | Sets the child control definitions. | Array of valid control definitions.
+The [UI YAML](api_ui-definition.html) is pretty straight forward. It follows a tree structure that defines the child/parent relationship between the controls.
+The top level or root control is the first thing that is described by the YAML. The root control can be understood as the whole options panel.
 
 ```YAML
 name:  descriptives
@@ -38,50 +27,13 @@ children:
 
 The root control is a [`ParentControl`](ui-parentcontrol.html) and as the name suggests serves as a parent to child controls. All parent controls contain the property `children` which defines an array of control definitions to be embedded. All UI design happens within the `children` node of the root control. Control definitions are added here in the form we design.
 
-When controls are added to the root control they are added in a list form, from top to bottom of the options panel.
+When [controls](api_ui-definition.html) are added to the root control they are added in a list form, from top to bottom of the options panel.
 
 ## Controls
 
-There are many different controls that can be used within the jamovi options ui panel. Each control has been designed for a specific option type(s). For example, a checkbox is designed around a `Bool` option type, where as a combobox control displays and writes the data of a `List`. Jamovi provides a solid array of basic controls to cover all the current option types. Controls will continue to be developed as jamovi grows but the current list covers most use cases.
+There are three different categories of controls, [Layout Controls](api_ui-definition.html), [Option Controls](api_ui-definition.html), and [Display Controls](api_ui-definition.html). As the names suggest, layout controls are used to 'layout' child controls in the UI, option controls allow for option values to be displayed and modified, while display controls are for presenting static information such as a `Label`. 
 
-When adding child controls to a `ParentControl`, at the very least the `type` property needs to be specified (as well as the minimum requirements for that control).
-
-```YAML
-name:  descriptives
-title: Descriptives
-jus:   '2.0'
-stage: 0
-compilerMode: tame
-children:
-  - type: LayoutBox
-    margin: large
-    children:
-    - type: Label
-      label: jamovi is great?
-    - type: Label
-      label: Of cause it is!
-
-```
- 
-Now we can add, move or adjust any control to meet our needs. Here is a list of controls that can make that possible:
-
-- [`LayoutBox`](ui-layoutbox.html)
-- [`CollapseBox`](ui-collapsebox.html)
-- [`TextBox`](ui-textbox.html)
-- [`CheckBox`](ui-checkbox.html)
-- [`RadioButton`](ui-radiobutton.html)
-- [`ComboBox`](ui-combobox.html)
-- [`Label`](ui-label.html)
-- [`ListBox`](ui-listbox.html)
-- [`Supplier`](ui-supplier.html)
-- [`VariableSupplier`](ui-variablesupplier.html)
-- [`TargetLayoutBox`](ui-targetlayoutbox.html)
-- [`VariableLabel`](ui-variablelabel.html)
-- [`TermLabel`](ui-termlabel.html)
-
----------------
-
-Below is a helpful list for determining which option types are supported by which control types. This will help in determining what controls are need to display your data.
+For help with option controls, below is a list for guidance in determining which option types are supported by which control types. This will help in determining what controls are need to display your data.
 
 The examples included are the **minimum required** properties for the control to be correctly configured for the specific option type, so they may need further modifying to meet your needs.
 
