--- a/ui-collapsebox.Rmd
+++ b/ui-collapsebox.Rmd
@@ -3,7 +3,7 @@ title: "CollapseBox"
 output: html_document
 ---
 
-**Inherits from `LayoutBox`**
+**Inherits from [`LayoutBox`](ui-layoutbox.html)**
 
 The `CollapseBox` is a `LayoutBox` that can be collapsed down to a label so that advanced options can be hidden until needed.
 
@@ -13,7 +13,7 @@ In addition to any inherited properties, a `CollapseBox` supports:
 
 Property      | Description                               | Form                 |
 ------------- | ------------------------------------------| -------------------- |
-*collapsed*  | Sets the initial collapsed state of the control. | boolean
-*label*  | Sets the text that will be displayed in the label bar of the control. | string
+`collapsed`  | Sets the initial collapsed state of the control. | boolean
+`label`  | Sets the text that will be displayed in the label bar of the control. | string
 
 ----------------------------------------
