--- a/ui-label.Rmd
+++ b/ui-label.Rmd
@@ -6,7 +6,7 @@ output: html_document
 A `Label` is a simple control that displays text. It can take two inheritance forms depending on how it is setup. The first is a *static label* and the second is an *option label*.
 
 ##Option Label
-**Inherits from `OptionControl`, `ParentControl`**
+**Inherits from (`OptionControl`](ui-optioncontrol.html), [`ParentControl`](ui-parentcontrol.html)**
 
 A `Label` is by default an *option label* unless the `label` property is defined. An option `Label` will populate its display using the underlying option to which it has been assigned. For further information about option binding see [`OptionControl`](ui-optioncontrol.html).
 
@@ -17,7 +17,7 @@ When bound to an option, there are no `Label` specific properties. All behavior 
 -------------
 
 ##Static Label
-**Inherits from `BaseControl`, `ParentControl`**
+**Inherits from [`BaseControl`](ui-basecontrol.html), [`ParentControl`](ui-parentcontrol.html)**
 
 A static `Label` is created when the `label` property of the control is defined. In this form the `Label` control acts like any old label.
 
@@ -27,7 +27,7 @@ In addition to any inherited properties, a `Label` supports:
 
 Property      | Description                               | Form                 |
 ------------- | ------------------------------------------| -------------------- |
-*label*  | Sets the text to be displayed by the control. | string
+`label`  | Sets the text to be displayed by the control. | string
 
 ###Example
 
