--- a/ui-label.Rmd
+++ b/ui-label.Rmd
@@ -31,7 +31,7 @@ Property      | Description                               | Form                
 
 ###Example
 
-```
+```{yaml}
 - type: Label
   label: Percentile Values
   children:
