--- a/ui-basic-design.Rmd
+++ b/ui-basic-design.Rmd
@@ -1,35 +1,70 @@
 ---
-title: "Basic UI Design"
+title: "UI Design"
 output: html_document
 ---
 
-A simple UI for an analysis is very easy to create. In fact, it is so easy that the compiler will do it for you. In previous the previous tutorials you would have seen how to create the a.yaml file for your analysis. The a.yaml file describes the options that you need for your analysis. This same file is all you need for the jamovi compiler to create your basic UI! 
-The jamovi compiler uses this file to first generate a basic layout and then populate it with appropriate controls for the options you have chosen. The compiler then writes this information to a u.yaml file that can be found in the jamovi directory of your module. If you make any changes to your a.yaml file in future iterations, the u.yaml will be overwritten and those changes will automatically appear in your UI after you compile. It's as simple as that. Quick, easy and hassle free.
+UIs for jamovi analyses are defined in the .u.yaml file (A refresher on the files and the relationship between them is described [here](tuts0103-creating-an-analysis.html)). This describes what sort of control each option is represented by (i.e. a dropdown list, or some radio buttons), and the order and the layout in which they will appear.
 
+### `aggressive` vs `tame` compiler mode
 
-## Auto generation
+By default, .u.yaml files are in `aggressive` compiler mode. This means when installing jamovi modules with `jmvtools::install()` the .u.yaml files are regenerated and replaced each time. This is good early on in the development process, but as development progresses, getting a UI *just right* or adding custom behaviour requires hand editing of the .u.yaml files. To prevent jmvtools from simply replacing all your changes, the .u.yaml file can be placed in `tame` mode. In `tame` mode the compiler respects your changes, and will not interfere with your adjustments. The trade-off is that the compiler often can't insert new controls into the UI as optimally.
 
-The generated file is constructed using the information provided in the a.yaml file. The a.yaml file describes the options required by your analyses and is described in more detail here. Using this information, the compiler creates a u.yaml file and fills it with appropriate controls for each option. Finding appropriate controls for simple options like a Boolean or Integer option is easy,
+To begin with we'd encourage you to leave your .u.yaml files in `aggressive` mode.
 
-```{yaml}
-- name: mean
-  title: Mean
-  type: Bool
-  default: true
+### Controls
+
+As we've seen earlier in this tutorial series with our t-test example, each option is represented by one or more controls. Our list option was represented by a list box, boolean options were represented by checkboxes, and Variable options were represented as a box that variables could be dragged to.
+
+Let's take a look at UI, and the .u.yaml file which is responsible for it:
+
+![](ui-basic-design.png)
+
+```
+title: Independent Samples T-Test
+name: ttestIS
+jus: '2.0'
+stage: 0
+compilerMode: aggressive
+
+children:
+
+  - type: VariableSupplier
+    persistentItems: false
+    stretchFactor: 1
+    children:
+    
+      - type: TargetLayoutBox
+        label: Dependent Variables
+        children:
+          - type: VariablesListBox
+            name: deps
+            isTarget: true
+            
+      - type: TargetLayoutBox
+        label: Grouping Variable
+        children:
+          - type: VariablesListBox
+            name: group
+            maxItemCount: 1
+            isTarget: true
+            
+  - type: LayoutBox
+    margin: large
+    children:
+      - type: ComboBox
+        name: alt
+        
+  - type: LayoutBox
+    margin: large
+    children:
+      - type: CheckBox
+        name: varEq
 ```
 
-however, the compiler can have more difficulty with more complicated custom options such as embedded arrays or groups.
+As can be seen, controls are arranged in a hierarchy. At the very top is a control of type `VariableSupplier`. It has two children: `deps` of type `VariablesListBox` and `group` of type `VariableListBox`. Together, these three controls create the variables list, and the 'Dependent Variables' and 'Grouping Variable' drop targets.
 
-```{yaml}
-- name: cov
-  title: Covariates
-  type: Array
-  default: [[]]
-  template:
-      type: Variables
-```
+Next is a `LayoutBox` which contains the hypothesis `ComboBox`, followed by another `LayoutBox` containing the equality of variances `CheckBox`. By default, items are laid out in a grid from top to bottom.
 
-The order of the controls in a generated UI file is also determined by the a.yaml file and therefore may not always be appropriate.
-
+TODO: how to layout controls in other configurations, group headings, etc.
 
 Next: [Advanced UI Design](ui-advanced-design.html)
