Error in constructFormula() needs to call jmvcore
constructFormula() is a jmvcore utility, not a base R function. The change to jmvcore::constructFormula() was required so R can explicitly locate the function within the jmvcore namespace. Without the prefix, R cannot find the function and throws an error.

--- a/tuts0104-implementing-an-analysis.Rmd
+++ b/tuts0104-implementing-an-analysis.Rmd
@@ -145,7 +145,7 @@ ttestISClass <- R6Class("ttestISClass",
     private=list(
         .run=function() {
 
-            formula <- constructFormula(self$options$dep, self$options$group)
+            formula <- jmvcore::constructFormula(self$options$dep, self$options$group) 
             formula <- as.formula(formula)
         
             results <- t.test(formula, self$data)
