--- a/tuts0106-adding-plots.Rmd
+++ b/tuts0106-adding-plots.Rmd
@@ -6,60 +6,78 @@ In this section, we'll add a plot to the t-test analysis we've been developing i
 
 ```{yaml }
 ---
-name:  ttest
+  name:  ttest
 title: Independent Samples T-Test
 jrs:   '1.1'
 
 items:
-    - name:  ttest
-      title: Independent Samples T-Test
-      type: Table
-      rows:  1
-      columns:
-        - name: var
-          title: ''
-          type: text
-        - name: t
-          type: number
-        - name: df
-          type: integer
-        - name: p
-          type: number
-          format: zto,pvalue
-    
-    - name: plot
-      title: Descriptives Plot
-      type: Image
-      width:  400
-      height: 300
-      renderFun: .plot
+  - name:  ttest
+title: Independent Samples T-Test
+type: Table
+rows:  1
+columns:
+  - name: var
+title: ''
+type: text
+- name: t
+type: number
+- name: df
+type: integer
+- name: p
+type: number
+format: zto,pvalue
+
+- name: plot
+title: Descriptives Plot
+type: Image
+width:  400
+height: 300
+renderFun: .plot
 ```
 
 Same as before, we define an item with a `name`, `title` and a `type`; in this case the type is `Image`. Additionally, we define `renderFun` which is the name of the function responsible for rendering the image. Whatever we specify as the render function, we must add as a *private member function* to `ttestClass` in `ttest.b.R`:
 
 ```{r eval=FALSE }
 #' @export
-ttestClass <- R6::R6Class(
-    "ttestClass",
-    inherit = ttestBase,
-    private = list(
-        .run = function() {
-            formula <- paste(self$options$dep, '~', self$options$group)
-            formula <- as.formula(formula)
-            
-            results <- t.test(formula, self$data)
-            
-            table <- self$results$ttest
-            table$setRow(rowNo=1, values=list(
-                var=self$options$dep,
-                t=results$statistic,
-                df=results$parameter,
-                p=results$p.value
-            ))
-        },
-        .plot=function(image, ...) {  # <-- the plot function
+ttestClass <- if (requireNamespace('jmvcore', quietly=TRUE)) R6::R6Class(
+  "ttestClass",
+  inherit = ttestBase,
+  private = list(
+    .run = function() {
+      
+      if (length(self$options$dep) == 0 || length(self$options$group) == 0) {
+        return()
+      }
+      
+      formula <- jmvcore::constructFormula(self$options$dep, self$options$group) 
+      formula <- as.formula(formula)
+      
+      results <- t.test(formula, self$data, var.equal=self$options$varEq)
+      
+      table <- self$results$ttest
+      
+      table$setRow(rowNo=1, values=list(
+        var=self$options$dep,
+        t=results$statistic,
+        df=results$parameter,
+        p=results$p.value
         
-        })
+      )) 
+      
+      means  <- aggregate(formula, self$data, mean)[,2]
+      ses    <- aggregate(formula, self$data, function(x) sd(x)/sqrt(length(x)))[,2]
+      sel    <- means - ses  # standard error lower bound
+      seu    <- means + ses  # standard error upper bound
+      levels <- base::levels(self$data[[self$options$group]])
+      plotData <- data.frame(level=levels, mean=means, sel=sel, seu=seu)
+      
+      image <- self$results$plot
+      image$setState(plotData)
+      
+    },
+    .plot=function(image, ...) {  # <-- the plot function
+      
+    })
 )
 ```
 
@@ -67,13 +85,13 @@ ttestClass <- R6::R6Class(
 
 We're going to use `ggplot2` for plotting, so make sure you have that installed. To use ggplot2 in this package/module, we need to add some entries into the DESCRIPTION and NAMESPACE files. We add ggplot2 to the imports line in the DESCRIPTION, so it reads:
 
-```
+```         
 Imports: jmvcore, R6, ggplot2
 ```
 
 and we'll add the following line into NAMESPACE:
 
-```
+```         
 import(ggplot2)
 ```
 
@@ -88,14 +106,15 @@ In jamovi modules, plotting occurs in two stages; first the data for the plot is
 For the t-test, we're going to plot a mean for each of the groups, and the standard errors. In `ggplot2`, we're required to assemble these 'plot points' into a data frame, which we will do as follows:
 
 ```{r eval=FALSE}
-    means  <- aggregate(formula, self$data, mean)[,2]
-    ses    <- aggregate(formula, self$data, function(x) sd(x)/sqrt(length(x)))[,2]
-    sel    <- means - ses  # standard error lower bound
-    seu    <- means + ses  # standard error upper bound
-    levels <- base::levels(self$data[[self$options$group]])
-    plotData <- data.frame(level=levels, mean=means, sel=sel, seu=seu)
+means  <- aggregate(formula, self$data, mean)[,2]
+ses    <- aggregate(formula, self$data, function(x) sd(x)/sqrt(length(x)))[,2]
+sel    <- means - ses  # standard error lower bound
+seu    <- means + ses  # standard error upper bound
+levels <- base::levels(self$data[[self$options$group]])
+plotData <- data.frame(level=levels, mean=means, sel=sel, seu=seu)
 ```
-```
+
+```         
 ##   level     mean      sel      seu
 ## 1    OJ 20.66333 19.45733 21.86934
 ## 2    VC 16.96333 15.45417 18.47250
@@ -104,22 +123,22 @@ For the t-test, we're going to plot a mean for each of the groups, and the stand
 This plot data we assign to the image using the `setState()` function:
 
 ```{r eval=FALSE}
-    image <- self$results$plot
-    image$setState(plotData)
+image <- self$results$plot
+image$setState(plotData)
 ```
 
 Next, we'll add the plotting code into the `.plot()` function we created:
 
 ```{r eval=FALSE}
-    .plot=function(image, ...) {
-        plotData <- image$state
-        plot <- ggplot(plotData, aes(x=level, y=mean)) +
-            geom_errorbar(aes(ymin=sel, ymax=seu, width=.1)) +
-            geom_point(aes(x=level, y=mean)) +
-            labs(title=self$options$dep)
-        print(plot)
-        TRUE
-    }
+.plot=function(image, ...) {
+  plotData <- image$state
+  plot <- ggplot(plotData, aes(x=level, y=mean)) +
+    geom_errorbar(aes(ymin=sel, ymax=seu, width=.1)) +
+    geom_point(aes(x=level, y=mean)) +
+    labs(title=self$options$dep)
+  print(plot)
+  TRUE
+}
 ```
 
 The plot function accepts an argument `image`, which corresponds to the image object we called `setState()` on. We can retrieve the state object from this image with `image$state`, which we can see is being assigned to `plotData`.
@@ -134,48 +153,58 @@ So this is our final `ttest.b.R` file:
 
 ```{r eval=FALSE }
 #' @export
-ttestClass <- R6::R6Class(
-    "ttestClass",
-    inherit = ttestBase,
-    private = list(
-        .run = function() {
-            formula <- paste(self$options$dep, '~', self$options$group)
-            formula <- as.formula(formula)
-            
-            results <- t.test(formula, self$data)
-            
-            table <- self$results$ttest
-            table$setRow(rowNo=1, values=list(
-                var=self$options$dep,
-                t=results$statistic,
-                df=results$parameter,
-                p=results$p.value
-            ))
-            
-            means  <- aggregate(formula, self$data, mean)[,2]
-            ses    <- aggregate(formula, self$data, function(x) sd(x)/sqrt(length(x)))[,2]
-            sel    <- means - ses  # standard error lower bound
-            seu    <- means + ses  # standard error upper bound
-            levels <- base::levels(self$data[[self$options$group]])
-            plotData <- data.frame(level=levels, mean=means, sel=sel, seu=seu)
-            
-            image <- self$results$plot
-            image$setState(plotData)
-        },
-        .plot=function(image, ...) {
-            plotData <- image$state
-            plot <- ggplot(plotData, aes(x=level, y=mean)) +
-                geom_errorbar(aes(ymin=sel, ymax=seu, width=.1)) +
-                geom_point(aes(x=level, y=mean)) +
-                labs(title=self$options$dep)
-            print(plot)
-            TRUE
-        })
+ttestClass <- if (requireNamespace('jmvcore', quietly=TRUE)) R6::R6Class(
+  "ttestClass",
+  inherit = ttestBase,
+  private = list(
+    .run = function() {
+      
+      if (length(self$options$dep) == 0 || length(self$options$group) == 0) {
+        return()
+      }
+      
+      formula <- jmvcore::constructFormula(self$options$dep, self$options$group) 
+      formula <- as.formula(formula)
+      
+      results <- t.test(formula, self$data, var.equal=self$options$varEq)
+      
+      table <- self$results$ttest
+      
+      table$setRow(rowNo=1, values=list(
+        var=self$options$dep,
+        t=results$statistic,
+        df=results$parameter,
+        p=results$p.value
+        
+      )) 
+      
+      means  <- aggregate(formula, self$data, mean)[,2]
+      ses    <- aggregate(formula, self$data, function(x) sd(x)/sqrt(length(x)))[,2]
+      sel    <- means - ses  # standard error lower bound
+      seu    <- means + ses  # standard error upper bound
+      levels <- base::levels(self$data[[self$options$group]])
+      plotData <- data.frame(level=levels, mean=means, sel=sel, seu=seu)
+      
+      image <- self$results$plot
+      image$setState(plotData)
+      
+    },
+    
+    .plot=function(image, ...) {
+      plotData <- image$state
+      plot <- ggplot(plotData, aes(x=level, y=mean)) +
+        geom_errorbar(aes(ymin=sel, ymax=seu, width=.1)) +
+        geom_point(aes(x=level, y=mean)) +
+        labs(title=self$options$dep)
+      print(plot)
+      TRUE
+      
+    })
 )
 ```
 
 And these are our final results, including the plot:
 
-![](tuts0106-adding-plots-final.png){width=441px}
+![](tuts0106-adding-plots-final.png){width="441px"}
 
 Next: [Distributing Modules](tuts0107-distributing-modules.html)
